[package]
name = "synth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
lazy_static = "*"
winapi = { version = "*", features = ["mmeapi", "mmsystem", "mmreg", "mmdeviceapi", "impl-default", "winerror", "basetsd", "minwindef", "winnt", "winuser"] }